k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api-container
        image: opsta-api:v1
        imagePullPolicy: Never #ไม่ให้มัน Pull จากในเน็ต ให้ Pull จากในเครื่อง
        ports:
        - containerPort: 8080
